add tmp remote device

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@tweenjs/tween.js": "^23.1.1",
     "axios": "^1.7.2",
     "bcrypt-ts": "^5.0.2",
-    "expr-eval": "^2.0.2",
     "fast-xml-parser": "^4.4.1",
     "file-saver": "^2.0.5",
+    "hls.js": "^1.6.15",
     "peerjs": "^1.5.2",
     "systemjs": "^6.15.1",
     "uuid": "^9.0.1"
