--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/systemjs": "^6.13.5",
     "@types/uuid": "^9.0.8",
+    "@types/w3c-image-capture": "^1.0.11",
     "encoding": "^0.1.13",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.5",
@@ -24,9 +25,10 @@
   "dependencies": {
     "@tensorflow/tfjs": "^4.22.0",
     "@tweenjs/tween.js": "^23.1.1",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.7.2",
     "bcrypt-ts": "^5.0.2",
-    "fast-xml-parser": "^4.4.1",
+    "fast-xml-parser": "^5.3.7",
     "file-saver": "^2.0.5",
     "hls.js": "^1.6.15",
     "peerjs": "^1.5.2",
